# chip-8-emu

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: cpu.rs  lib.rs  main.rs  memory.rs  renderer.rs  sound.rs  stack.rs  timer.rs
src/cpu/: opcode.rs  opcode_impl.rs
