[package]
name = "chip-8-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
gl = "0.14.0"
simple_logger = "4.0.0"
rand = "0.8"
anyhow = "1.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "36fb23307e10cc6ffcec566c46c4bb3f567c82c6"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }